update chloe collection description

--- a/content/projects/chloe-collection/main.mdx
+++ b/content/projects/chloe-collection/main.mdx
@@ -22,8 +22,7 @@ Designed with customizability in mind, this mod is open-source and includes many
 - Plop the files into your game folder.
 - If you get an error message on startup, remove d3d9.dll from the game folder.
 - Enjoy, nya~ :3
-
-
+  
 # Features
 
 - Addon AI: Neville from NFS Carbon
@@ -44,6 +43,7 @@ Designed with customizability in mind, this mod is open-source and includes many
 - An option to tune your car in career mode, changing its brake balance and nitro behavior
 - All cars and tracks unlocked by default for Single Race mode
 - Bonus variants of all Stunt cars
+- Borderless windowed mode with seamless alt-tabbing that doesn't crash the game, as well as an in-game toggle between borderless and windowed mode
 - Career handling damage in the Options menu
 - Carnage Mode rebalancing, plus new content added
 - Combined FO2 & FOUC soundtrack (customizable in Sound Options)
@@ -73,8 +73,7 @@ Designed with customizability in mind, this mod is open-source and includes many
 - Verbose LUA errors
 - Water physics for submerged props and cars
 - Widescreen support, all menu code has been rewritten to support a dynamic aspect ratio with customizable safe-zones
-
-
+  
 # Credits
 
 - selo920 - camera.ini for FO1 cars, collisions for FO1 tracks
@@ -87,8 +86,7 @@ Designed with customizability in mind, this mod is open-source and includes many
 - rowwise - car skins, co-driver voice
 - Claude Yones - playtesting
 - Bulko - Super Author times for multilap time trials
-
-
+  
 # Known issues
 
 - AI is incompetent on custom tracks
@@ -99,8 +97,7 @@ Designed with customizability in mind, this mod is open-source and includes many
 - Some custom tracks have objects that can get your car caught and stuck (especially watch out for railings on Retro Demo and Rally Trophy tracks)
 - Some trees don't look correct on FlatOut 1 and Retro Demo tracks
 - The Rally HUD may show the player moving backwards when the stage path is going further away from the finish
-
-
+  
 # Source code
 
 Main plugin: https://github.com/gaycoderprincess/FlatOutUCChloeCollection  
@@ -113,7 +110,6 @@ Verbose LUA errors: https://github.com/gaycoderprincess/FlatOutUCVerboseLUAError
 Intro skip: https://github.com/gaycoderprincess/FlatOutUCNoIntro  
 Launcher skip: https://github.com/gaycoderprincess/FlatOutUCNoLauncher  
 
-
 # Tools used
 
 My tool for editing cars & tracks: https://github.com/gaycoderprincess/FlatOutW32BGMTool/releases  
@@ -121,12 +117,11 @@ My tool for editing the game's database: https://github.com/gaycoderprincess/Fla
 My tool for fixing washed-out and invalid FlatOut DDS files: https://github.com/gaycoderprincess/FlatOutUCDDSFixer/releases  
 xNyaDev's bfstool for packing BFS files: https://github.com/xNyaDev/bfstool  
 
-
 # Disclaimer
 
-This mod does not and will never be compatible with the newest version of the game on Steam, as me and the team do not approve of or tolerate the actions of Strategy First and the ZOOM Platform in any way.
-All they have done in recent times is milk the last cents out of a dead horse for profit by selling a modpack commercially, shamelessly using the work of the community without permission such as in the case of xNyaDev's bfstool, dishing out empty promises of upcoming features, and making the games less stable for little to no actual benefit.
-Not to mention the lackluster Steam Workshop support which is now filled with low-effort reuploads of other people's mods, which are not even functional in some cases.
+This mod does not and will never be compatible with the newest version of the game on Steam, as me and the team do not approve of or tolerate the actions of Strategy First and the ZOOM Platform in any way.  
+All they have done in recent times is milk the last cents out of a dead horse for profit by selling a modpack commercially, shamelessly using the work of the community without permission such as in the case of xNyaDev's bfstool, dishing out empty promises of upcoming features, and making the games less stable for little to no actual benefit.  
+Not to mention the lackluster Steam Workshop support which is now filled with low-effort reuploads of other people's mods, which are not even functional in some cases.  
 If you have money to spare, please support the actual developers of the game. Go buy Wreckfest, get Wreckfest 2 when it releases, and if you want a FlatOut game, buy it used. Thanks.
 
 _Tags: {metadata.tags.join(', ')}_
