--- a/content/projects/chloe-collection/changelog/1.mdx
+++ b/content/projects/chloe-collection/changelog/1.mdx
@@ -6,7 +6,7 @@ export const metadata = {
 
 - Added a Super Author time for the Motor Raceway 2 time trial by Bulko
 - Added an option to change the soundtrack in stunt events
-- Added better pacenotes to some Rally Trophy stages by @cordosyl 
+- Added better pacenotes to some Rally Trophy stages by CompletelyCordo
 - Adjusted some score targets for Carnage Mode
 - Fixed the default player portrait being the female one if your playermodel is FlatOut 1 Male
 - Improved the per-event music system, decreasing load times, improving playlist randomization and hopefully fixing all ZLib-related errors
