mini-image, formatting, remove tags, add fouc hlmov

--- a/content/projects/chloe-collection/changelog/136.mdx
+++ b/content/projects/chloe-collection/changelog/136.mdx
@@ -16,7 +16,7 @@ export const metadata = {
 - Changed the handling of the FO1 Overrunner
 - Fixed the panels on FO1 cars falling off way too easily (thanks to xInfamousRYANx for fixing up panels.ini)
 - Fixed sync issues in multiplayer Stunt Show if a player has negative score
-- Fixed the Ranker1 files being corrupted again
+- Fixed the Ranker1 files being corrupted *again*
 - Improved Stunt Show scoring and landing detection
 - Increased the Stunt Show Carnage Mode event's author score
 - Moved the Cop Corvette to Bonus class
