--- a/content/projects/chloe-collection/main.mdx
+++ b/content/projects/chloe-collection/main.mdx
@@ -1,7 +1,7 @@
 export const metadata = {
     "image": "/img/ccheader.png",
+    "miniImage": "/img/chloe-collection.png",
     "name": "Ultimate Carnage Chloe Collection",
-    "tags": ["Big"],
     "lastUpdated": "2024-11-10 8:49",
     "link": "https://drive.google.com/file/d/1y46HsckMQegCoWdjSXC8A9_Prvo4tEQA/view?usp=sharing"
 }
@@ -123,7 +123,5 @@ This mod does not and will never be compatible with the newest version of the ga
 All they have done in recent times is milk the last cents out of a dead horse for profit by selling a modpack commercially, shamelessly using the work of the community without permission such as in the case of xNyaDev's bfstool, dishing out empty promises of upcoming features, and making the games less stable for little to no actual benefit.  
 Not to mention the lackluster Steam Workshop support which is now filled with low-effort reuploads of other people's mods, which are not even functional in some cases.  
 If you have money to spare, please support the actual developers of the game. Go buy Wreckfest, get Wreckfest 2 when it releases, and if you want a FlatOut game, buy it used. Thanks.
-
-_Tags: {metadata.tags.join(', ')}_
 
 _Last updated: {metadata.lastUpdated}_
