--- a/content/projects/freeman-api/main.mdx
+++ b/content/projects/freeman-api/main.mdx
@@ -1,7 +1,7 @@
 export const metadata = {
     "image": "/img/apiheader.png",
+    "miniImage": "/img/freemanapi.png",
     "name": "Freeman API",
-    "tags": ["Big", "Bhop"],
     "lastUpdated": "2024-11-25 11:05",
     "link": "https://github.com/gaycoderprincess/FreemanAPI/releases"
 }
@@ -9,7 +9,5 @@ export const metadata = {
 An easy-to-use API to implement movement from the original Half-Life and Half-Life 2 into other games.
 
 Check [FlatOutUCHLMovement](https://github.com/gaycoderprincess/FlatOutUCHLMovement) for an example project using this library.
-
-_Tags: {metadata.tags.join(', ')}_
 
 _Last updated: {metadata.lastUpdated}_
