TiR Tweaks, update freemanapi link

--- a/content/projects/freeman-api/mini.mdx
+++ b/content/projects/freeman-api/mini.mdx
@@ -2,6 +2,6 @@
 
 An easy-to-use API to implement movement from the original Half-Life and Half-Life 2 into other games.
 
-Check [FlatOutUCHLMovement](https://github.com/gaycoderprincess/FlatOutUCHLMovement) for an example project using this library.
+Check [FlatOutUCHLMovement](https://gaycoderprincess.github.io/project/fouc-hlmov) for an example project using this library.
 
 _Last updated: {props.metadata.lastUpdated}_
