--- a/content/projects/freeman-api/main.mdx
+++ b/content/projects/freeman-api/main.mdx
@@ -8,6 +8,6 @@ export const metadata = {
 
 An easy-to-use API to implement movement from the original Half-Life and Half-Life 2 into other games.
 
-Check [FlatOutUCHLMovement](https://github.com/gaycoderprincess/FlatOutUCHLMovement) for an example project using this library.
+Check [FlatOutUCHLMovement](https://gaycoderprincess.github.io/project/fouc-hlmov) for an example project using this library.
 
 _Last updated: {metadata.lastUpdated}_
