--- a/content/projects/chloe-collection/main.mdx
+++ b/content/projects/chloe-collection/main.mdx
@@ -6,7 +6,7 @@ export const metadata = {
     "link": "https://drive.google.com/file/d/1y46HsckMQegCoWdjSXC8A9_Prvo4tEQA/view?usp=sharing"
 }
 
-A modpack for FlatOut UC that proves everyone's notions of "this game is unmoddable" dead wrong.
+A complete overhaul of FlatOut UC that proves everyone's notions of "this game is unmoddable" dead wrong.
 
 This mod was built from the ground-up with my own tooling, including single-handedly reverse-engineering the database format, the track format and the car model format.  
 This makes this mod the first of its kind for the game, as custom cars for UC and fully custom tracks for any FlatOut game were completely impossible before.
