--- a/content/projects/chloe-collection/mini.mdx
+++ b/content/projects/chloe-collection/mini.mdx
@@ -1,5 +1,5 @@
 # [{props.metadata.name}](/project/chloe-collection)
 
-A modpack for FlatOut UC that proves everyone's notions of "this game is unmoddable" dead wrong.
+A complete overhaul of FlatOut UC that proves everyone's notions of "this game is unmoddable" dead wrong.
 
 _Last updated: {props.metadata.lastUpdated}_
