flatout time trial mods

--- a/content/projects/chloe-collection/main.mdx
+++ b/content/projects/chloe-collection/main.mdx
@@ -1,7 +1,7 @@
 export const metadata = {
     "image": "/img/ccheader.png",
     "miniImage": "/img/chloe-collection.png",
-    "name": "Ultimate Carnage Chloe Collection",
+    "name": "FlatOut UC Chloe Collection",
     "lastUpdated": "2024-11-10 8:49",
     "link": "https://drive.google.com/file/d/1y46HsckMQegCoWdjSXC8A9_Prvo4tEQA/view?usp=sharing"
 }
