--- a/content/projects/fouc-hlmov/main.mdx
+++ b/content/projects/fouc-hlmov/main.mdx
@@ -1,7 +1,7 @@
 export const metadata = {
     "image": "/img/foheader.png",
     "miniImage": "/img/fouc-hlmov.png",
-    "name": "Ultimate Carnage Half-Life Movement",
+    "name": "FlatOut UC Half-Life Movement",
     "lastUpdated": "2024-12-15 12:35",
     "link": "https://github.com/gaycoderprincess/FlatOutUCHLMovement/releases"
 }
