update main page, fouc header

--- a/content/projects/fouc-hlmov/main.mdx
+++ b/content/projects/fouc-hlmov/main.mdx
@@ -1,5 +1,5 @@
 export const metadata = {
-    "image": "/img/foheader.png",
+    "image": "/img/foucheader.png",
     "miniImage": "/img/fouc-hlmov.png",
     "name": "FlatOut UC Half-Life Movement",
     "lastUpdated": "2024-12-15 12:35",
