--- a/content/projects/fouc-timetrial/main.mdx
+++ b/content/projects/fouc-timetrial/main.mdx
@@ -1,5 +1,5 @@
 export const metadata = {
-    "image": "/img/foheader.png",
+    "image": "/img/foucheader.png",
     "miniImage": "/img/fouc-timetrial.png",
     "name": "FlatOut UC Time Trial Ghosts",
     "lastUpdated": "2024-10-05 17:11",
