--- a/content/downloads.mdx
+++ b/content/downloads.mdx
@@ -1,5 +1,5 @@
 Big Projects
-- FlatOut UC Chloe Collection: https://drive.google.com/file/d/1y46HsckMQegCoWdjSXC8A9_Prvo4tEQA/view
+- FlatOut UC Chloe Collection: https://drive.google.com/file/d/1Ac1vZrxtSuZx_l_1BnvIJxJWGPgCyupO/view?usp=sharing
 - FreemanAPI: https://github.com/gaycoderprincess/FreemanAPI/releases
 
 
