chloe collection 1.55 changelog

--- a/content/projects/chloe-collection/changelog/136.mdx
+++ b/content/projects/chloe-collection/changelog/136.mdx
@@ -8,7 +8,7 @@ export const metadata = {
 - Added a new mode to Time Trial that has you do runs of 3 laps at once
 - Added an option to change which stick input corresponds to what axis of air control
 - Added and changed the descriptions of some tracks
-- Added descriptions to all cars, viewable by pressing the X button in the car selection menu (thanks to CompletelyCordo for writing them for the FO1 cars)
+- Added descriptions to all cars, viewable by pressing the X button in the car selection menu (thanks to Cordo for writing them for the FO1 cars)
 - Added support for opponent ghosts into Time Trial mode, putting a replay into `Ghosts/Opponents` will make it show up as a second ghost independent of your PB
 - Added the FO2 version of the Terrator
 - Changed all car IDs in the scripts and config files to use data path IDs instead of database IDs to make adding cars way easier in the future
