--- a/content/projects/chloe-collection/changelog/138.mdx
+++ b/content/projects/chloe-collection/changelog/138.mdx
@@ -5,7 +5,7 @@ export const metadata = {
 # v1.38
 
 - Added a new soundtrack for Stunt Show by teddyator 
-- Added unique descriptions to every Stunt SS car by CompletelyCordo
+- Added unique descriptions to every Stunt SS car by Cordo
 - Fixed Neville's driver texture being washed out
 - Improved headlights for the FO2 Terrator by teddyator 
 - Increased the Stunt Show Carnage Mode event's author score again :3c
