--- a/content/projects/chloe-collection/changelog/147.mdx
+++ b/content/projects/chloe-collection/changelog/147.mdx
@@ -10,7 +10,7 @@ export const metadata = {
 - Added a new stage of Rally Sweden
 - Added a rally HUD to some Rally Trophy stages, replacing the map with a progress bar
 - Added car water physics to Stone Skipping and all Midwest Ranch tracks
-- Added pacenotes to some Rally Trophy stages, with pacenote placements by CompletelyCordo, graphics by teddyator and co-driver voices by Claude Yones and rowwise 
+- Added pacenotes to some Rally Trophy stages, with pacenote placements by Cordo, graphics by teddyator and co-driver voices by Claude Yones and rowwise 
 - Adjusted the handling of the FO1 Slider a bit more
 - Disabled the View Replay option on Rally Trophy tracks due to various playback issues
 - Fixed a crash in Desert Town due to a bad prop
