--- a/content/projects/chloe-collection/changelog/149.mdx
+++ b/content/projects/chloe-collection/changelog/149.mdx
@@ -6,8 +6,8 @@ export const metadata = {
 
 - Added a brand new HUD for career time trials
 - Added new skins to the FO1 Speedevil and Mini Cooper S by teddyator 
-- Added pacenotes to more Rally Trophy stages by CompletelyCordo and teddyator 
-- Added Super Author times to all career time trials, set by Bulko and CompletelyCordo at their full power for those who want a real challenge
+- Added pacenotes to more Rally Trophy stages by Cordo and teddyator 
+- Added Super Author times to all career time trials, set by Bulko and Cordo at their full power for those who want a real challenge
 - Added suspension stiffness to the Car Tuning menu
 - Changed the career win/lose quotes to new ones by Twobei 
 - Disabled handling damage for career time trials
