--- a/content/projects/chloe-collection/changelog/150.mdx
+++ b/content/projects/chloe-collection/changelog/150.mdx
@@ -10,8 +10,8 @@ export const metadata = {
 - Added a new skin for the Alpine A110 by teddyator 
 - Added a separate soundtrack option for Carnage Race
 - Added art to the post-cup driver comments by Twobei
-- Added more Super Author times by CompletelyCordo
-- Added pacenotes to more Rally Trophy stages by CompletelyCordo
+- Added more Super Author times by Cordo
+- Added pacenotes to more Rally Trophy stages by Cordo
 - Adjusted some score targets for Carnage Race and career time trials
 - Adjusted the strength of suspension tuning
 - Carnage Race now forces either 11 or 12 opponents for both 7 and 31 for balancing reasons
