--- a/content/projects/chloe-collection/changelog/151.mdx
+++ b/content/projects/chloe-collection/changelog/151.mdx
@@ -6,7 +6,7 @@ export const metadata = {
 
 - Added a new skin for the FO1 Trasher by teddyator 
 - Added a separate soundtrack option for Deathmatch Derby
-- Added pacenotes to more Rally Trophy stages and cleaned up some existing ones by CompletelyCordo
+- Added pacenotes to more Rally Trophy stages and cleaned up some existing ones by Cordo
 - Adjusted some score targets for Carnage Mode
 - Changed the Stone Skipping event in Carnage Mode to the Starflight
 - Fixed the first Carnage Race having unbalanced AI after the previous update
