--- a/content/projects/chloe-collection/changelog/148.mdx
+++ b/content/projects/chloe-collection/changelog/148.mdx
@@ -5,7 +5,7 @@ export const metadata = {
 # v1.48
 
 - Added a new skin to the Saab 96 by teddyator 
-- Added pacenotes to more Rally Trophy stages by CompletelyCordo and teddyator 
+- Added pacenotes to more Rally Trophy stages by Cordo and teddyator 
 - Added 6 rally stages to the career mode as time trials, with 2 stages per class
 - Changed the default co-driver from Claude to Annie for new players
 - Fixed Rally Trophy cars appearing in the starter car selection even if they're disabled for career
