chloe collection 1.54 changelog, fouc hlmov install guide

--- a/content/projects/chloe-collection/changelog/154.mdx
+++ b/content/projects/chloe-collection/changelog/154.mdx
@@ -7,3 +7,5 @@ export const metadata = {
 - Added all Kenya, Switzerland and Karelia tracks from Rally Trophy, totaling to 20 new stages
 - Added a new system for car respawns on custom tracks, there are no longer any out-of-bounds or race-start reset spots on any rally stages and most FO1 tracks
 - Added new skins for the Retro Bug, Alpine A110 and Alfa Romeo GTA FTC by teddyator
+- Made all electric poles on FO1 tracks breakable
+- Made some bushes solid in Kenya Stage 1 and Arcade Stage 1 to make going out of bounds more difficult
