--- a/content/projects/fouc-hlmov/main.mdx
+++ b/content/projects/fouc-hlmov/main.mdx
@@ -10,4 +10,10 @@ Experimental plugin for FlatOut: Ultimate Carnage that implements movement from 
 
 Made using the [FreemanAPI](https://gaycoderprincess.github.io/project/freeman-api) library.
 
+## Installation
+
+- Make sure you have the Steam GFWL version of the game, as this is the only version this plugin is compatible with. (exe size of 4242504 bytes)
+- Plop the files into your game folder.
+- Enjoy, nya~ :3
+
 _Last updated: {metadata.lastUpdated}_
