--- a/content/projects/chloe-collection/changelog/155.mdx
+++ b/content/projects/chloe-collection/changelog/155.mdx
@@ -9,6 +9,8 @@ export const metadata = {
 - Added brand new variations for Whattahoo Town and Redpine Forest
 - Added new skins for the Ford Cortina, Ford Cortina FTC and Lancia Stratos FTC by teddyator 
 - Added some more FO1 tracks to the Reversed category in multiplayer
+- Checkpoint splits are now displayed as you pass them on rally tracks
 - Fixed issues with respawns on Gravel Supersmash
+- Fixed some physics oddities with the new respawn system
 - Fixed some textures on Rally Trophy tracks being incorrectly reused from other environments
 - Improved the rally progress bar, track progress is now counted per-split instead of as raw distance from the finish
