update chloe collection link and changelog

--- a/content/downloads.mdx
+++ b/content/downloads.mdx
@@ -12,7 +12,7 @@ FlatOut
 
 
 FlatOut: Ultimate Carnage
-- Chloe Collection: https://drive.google.com/file/d/1y46HsckMQegCoWdjSXC8A9_Prvo4tEQA/view
+- Chloe Collection: https://drive.google.com/file/d/1V6vWPtZCh0_2pCNymGKmYWtp_fZo9K7G/view?usp=sharing
 - FlatOut 2 Handling: https://github.com/gaycoderprincess/FlatOutUCFO2Handling/releases
 - Half-Life Movement: https://github.com/gaycoderprincess/FlatOutUCHLMovement/releases
 - Ingame DB Editor: https://github.com/gaycoderprincess/FlatOutUCIngameDBEditor/releases
