--- a/content/projects/chloe-collection/changelog/156.mdx
+++ b/content/projects/chloe-collection/changelog/156.mdx
@@ -16,3 +16,4 @@ export const metadata = {
 - Fixed Switzerland Stage 6 being uncompletable due to a bugged respawn point
 - Small improvements to lag compensation in multiplayer
 - The Rally HUD now displays on all rally stages even if the track doesn't have pacenotes
+- The time trial PB display now uses the same time format as the vanilla game
