fo2 chloe online

--- a/content/projects/chloe-collection/changelog/158.mdx
+++ b/content/projects/chloe-collection/changelog/158.mdx
@@ -11,9 +11,9 @@ export const metadata = {
 - Added pacenotes to more Rally Trophy stages by Cordo
 - Added some Lap Knockout events into career cups in Race and Street class
 - Added unique icons for Drift and Stunt Show events in Carnage Mode by teddyator
-- Adjustments to drift handling
 - Fixed Carnage Race based custom modes using the Carnage Race soundtrack
 - Fixed Carnage Race checkpoints giving you more points than they should
 - Fixed online Deathmatch Derbies still using the singleplayer HUD
 - Fixed the pressplay cheat not working
+- Small adjustments to drift handling
 - The cup race list menu now displays the gamemode as well as the track name
