--- a/content/downloads.mdx
+++ b/content/downloads.mdx
@@ -31,6 +31,7 @@ FlatOut: Ultimate Carnage
 FlatOut 2
 - AI Limit Adjuster: https://github.com/gaycoderprincess/FlatOut2AILimitAdjuster/releases
 - Car Limit Adjuster: https://github.com/gaycoderprincess/FlatOut2CarLimitAdjuster/releases
+- Chloe's Online: https://drive.google.com/file/d/1NpD_u_ER4Oz0gF_GTs2aVzDpQlqoWKSu/view?usp=sharing
 - Controller Support: https://github.com/gaycoderprincess/FlatOut2ControllerSupport/releases
 - FPS Unlocker: https://github.com/gaycoderprincess/FlatOut2FPSUnlocker/releases
 - Map Zoom: https://github.com/gaycoderprincess/FlatOut2MapZoom/releases
