--- a/content/projects/fo2-custommp/main.mdx
+++ b/content/projects/fo2-custommp/main.mdx
@@ -16,4 +16,9 @@ Plugin to add a custom, more stable and reliable client-server multiplayer mode 
 - Plop the files into your game folder, edit `FlatOut2CustomMP_gcp.toml` to change the options to your liking.
 - Enjoy, nya~ :3
 
+## Notes
+
+- This plugin is currently only compatible with the vanilla game. Using it alongside Selo's Car Pack or similar mods will lead to crashes.
+- You must have port 23756 forwarded on your router if you intend to host a game.
+
 _Last updated: {metadata.lastUpdated}_
