fo2 mp 1.03 updated link

--- a/content/projects/fo2-custommp/changelog/103.mdx
+++ b/content/projects/fo2-custommp/changelog/103.mdx
@@ -7,4 +7,7 @@ export const metadata = {
 - Added support for Selo's Car Pack
 - Added the ability to see race progress if you're in the lobby
 - Fixed player cars sometimes not updating when the car class is changed
+- Fixed some cases of exiting to the main menu when a race is interrupted by the host
+- Fixed some instances of invisible player arrows
 - Shuffled around the player profile stats for readability
+- Small improvements to lag compensation
