fo2 mp selo notes

--- a/content/projects/fo2-custommp/main.mdx
+++ b/content/projects/fo2-custommp/main.mdx
@@ -14,11 +14,12 @@ Plugin to add a custom, more stable and reliable client-server multiplayer mode 
 
 - Make sure you have v1.2 of the game, as this is the only version this plugin is compatible with. (exe size of 2990080 bytes)
 - Plop the files into your game folder, edit `FlatOut2CustomMP_gcp.toml` to change the options to your liking.
+- If you're using Selo's Car Pack, copy the contents of the `for selo pack` folder into your game directory.
 - Enjoy, nya~ :3
 
 ## Notes
 
-- This plugin is currently only compatible with the vanilla game. Using it alongside Selo's Car Pack or similar mods will lead to crashes.
+- This plugin is currently only compatible with the vanilla game and Selo's Car Pack. Using it alongside any other large mods will lead to crashes.
 - You must have port 23756 forwarded on your router if you intend to host a game.
 
 _Last updated: {metadata.lastUpdated}_
