update chloe collection changelog, new fo2 mod links

--- a/content/downloads.mdx
+++ b/content/downloads.mdx
@@ -34,7 +34,9 @@ FlatOut 2
 - Chloe Online: https://drive.google.com/file/d/1DHMtjRgME_pPzofpoXgwT-bxfgmSBjQB/view?usp=sharing
 - Controller Support: https://github.com/gaycoderprincess/FlatOut2ControllerSupport/releases
 - FPS Unlocker: https://github.com/gaycoderprincess/FlatOut2FPSUnlocker/releases
+- Ingame DB Editor: https://github.com/gaycoderprincess/FlatOut2IngameDBEditor/releases
 - Map Zoom: https://github.com/gaycoderprincess/FlatOut2MapZoom/releases
+- Menu Lib: https://github.com/gaycoderprincess/FlatOut2MenuLib/releases
 - Menu Map: https://github.com/gaycoderprincess/FlatOut2MenuMap/releases
 - Skin Swapper: https://github.com/gaycoderprincess/FlatOut2SkinSwapper/releases
 - Suspension Damage: https://github.com/gaycoderprincess/FlatOut2SuspensionDamage/releases
