--- a/content/projects/chloe-collection/changelog/159.mdx
+++ b/content/projects/chloe-collection/changelog/159.mdx
@@ -11,7 +11,7 @@ export const metadata = {
 - Adjusted some score targets for Carnage Mode
 - Changed the default stunt soundtrack to FlatOut 2
 - Changed the Normal handling mode, adding a lot more downforce when in the air
-- Derbies now show the remaining player count
+- Derbies in multiplayer now show the remaining player count
 - Fixed arcade checkpoints looking wrong on rally stages
 - Fixed drift events ending after 3-4 laps in some cases
 - Fixed the split timer sometimes showing speed comparisons when they're not enabled
