--- a/content/projects/chloe-collection/changelog/161.mdx
+++ b/content/projects/chloe-collection/changelog/161.mdx
@@ -16,7 +16,7 @@ export const metadata = {
 - Fixed the Cars Unlocked stat not including alternate variants, therefore making you unable to max it out
 - Fixed the game freezing for a few seconds in some track selection menus
 - Fixed the Normal handling mode being different after the last update due to broken downforce checks
-- Fixed the rally HUD appearing even if the game is paused
+- Fixed the Rally HUD and Time Trial HUD appearing even if the game is paused
 - Improved collision behavior in multiplayer
 - Multiplayer start positions are now randomized, players no longer all start in the same spot
 - Rally Mode now counts towards your game completion percentage
