--- a/content/downloads.mdx
+++ b/content/downloads.mdx
@@ -12,6 +12,7 @@ FlatOut
 
 
 FlatOut: Ultimate Carnage
+- Bouncy Mod: https://github.com/gaycoderprincess/FlatOutUCBouncyMod/releases
 - Chloe Collection: https://drive.google.com/file/d/1pzoVeRxwfzpKV12rzdQMXlwc5RqSs1GS/view?usp=sharing
 - FlatOut 2 Handling: https://github.com/gaycoderprincess/FlatOutUCFO2Handling/releases
 - Half-Life Movement: https://github.com/gaycoderprincess/FlatOutUCHLMovement/releases
