fouc skin swapper link

--- a/content/downloads.mdx
+++ b/content/downloads.mdx
@@ -22,6 +22,7 @@ FlatOut: Ultimate Carnage
 - No Intro: https://github.com/gaycoderprincess/FlatOutUCNoIntro/releases
 - No Launcher: https://github.com/gaycoderprincess/FlatOutUCNoLauncher/releases
 - No Wallriding: https://github.com/gaycoderprincess/FlatOutUCNoWallriding/releases
+- Skin Swapper: https://github.com/gaycoderprincess/FlatOutUCSkinSwapper/releases
 - Time Trial Ghosts: https://github.com/gaycoderprincess/FlatOutUCTimeTrialGhosts/releases
 - UC Tweaker: https://github.com/gaycoderprincess/FlatOutUCTweaker/releases
 - Ultrawide Support: https://github.com/gaycoderprincess/FlatOutUCUltrawideSupport/releases
