--- a/content/projects/chloe-collection/changelog/163.mdx
+++ b/content/projects/chloe-collection/changelog/163.mdx
@@ -4,6 +4,7 @@ export const metadata = {
 
 # v1.63
 
+- Added a better version of Panama to the Rally soundtrack from Rock Band 4, gathered by xInfamousRYANx 
 - Added better pacenotes to some Rally Trophy stages by Cordo
 - Added custom player colors for the multiplayer chat and player list
 - Added more preferences to the Online Options menu, including the ability to change your server's tickrate and see join notifications in chat
