update chloe collection changelog

--- a/content/projects/chloe-collection/changelog/164.mdx
+++ b/content/projects/chloe-collection/changelog/164.mdx
@@ -7,7 +7,7 @@ export const metadata = {
 - Added a brand new car, the Siboner 6 WT-F, the prop car from the game's City maps made drivable
 - Added a new gamemode, Knockout, where the player in last gets blown up every 15 seconds
 - Added better pacenotes to some Rally Trophy stages by Cordo
-- Added new cheats to unlock secret content
+- Added new cheats to unlock hidden content
 - Added new skins for the FO1 Blade, FO1 Pepper, FO1 Thunderbolt, FO1 Bullet and Siboner 6 WT-F by teddyator
 - Added new skins for the Siboner 6 WT-F and FO1 Foerd by rowwise
 - Added the ability to spectate in multiplayer after you finish the event
@@ -22,5 +22,6 @@ export const metadata = {
 - Fixed some issues with the Player Profile menu in multiplayer
 - Improved the resetpoints on City Central 1
 - Moved some Bonus cars to different menu garages
+- Race events now no longer auto-calculate opponent results
 - Small improvements towards user friendliness
 - The career race selection menu now defaults to the first page
