update chloe collection changelog

--- a/content/projects/chloe-collection/changelog/168.mdx
+++ b/content/projects/chloe-collection/changelog/168.mdx
@@ -23,6 +23,7 @@ export const metadata = {
 - Changed the texture loading priority to load TGAs first for UI textures, resulting in less compressed, higher quality textures
 - Changed the weight of the FO1 Slider to be identical to the weight of the Retro Slider
 - Cleaned up a lot of internal data, removing leftover car icons and making better use of car IDs
+- Fixed barrier collisions being 'sticky' on Retro Forest and Rally Trophy Sweden
 - Fixed the AI sometimes getting incredibly confused on City Central 2
 - Fixed the cash rewards in Rally Mode not adding to your total balance properly
 - Fixed the default player portrait sometimes showing up wrong in the profile selection menu
