update chloe collection changelog

--- a/content/projects/chloe-collection/changelog/168.mdx
+++ b/content/projects/chloe-collection/changelog/168.mdx
@@ -28,6 +28,7 @@ export const metadata = {
 - Fixed the cash rewards in Rally Mode not adding to your total balance properly
 - Fixed the default player portrait sometimes showing up wrong in the profile selection menu
 - Improved the custom respawn system, reducing the chance of being respawned further back than is necessary
+- Made props weigh less in comparison to your car in career mode
 - The FO1 Pepper is now rear-wheel drive
 - The drive-based multiplayer car classes now only exclude unfair Bonus cars, keeping cars such as the Judge and the Tough Trucks cars
 - The Temp350 cheat is now a toggle, typing it in again will re-hide all special cars
