--- a/content/projects/chloe-collection/changelog/169.mdx
+++ b/content/projects/chloe-collection/changelog/169.mdx
@@ -24,3 +24,4 @@ export const metadata = {
 - Made the Bayview Speedway tracks be cheat code locked as they aren't high quality enough to be base game content
 - Rebalanced the career mode to be more fair and respect the difficulty settings more with the help of Twobei
 - Removed dust particles from Carnage Race, drastically improving visibility
+- The Player Color option now includes a color preview
