--- a/content/projects/chloe-collection/changelog/170.mdx
+++ b/content/projects/chloe-collection/changelog/170.mdx
@@ -11,4 +11,5 @@ export const metadata = {
 - Bronze and Silver medals now count less towards your game completion stat than gold medals
 - Carnage Mode event scores are now saved in a more unique way, reducing the chance of scores becoming mismatched or corrupted
 - Changed some Carnage Mode target scores after player feedback
+- Fixed derbies in multiplayer instantly ending if the timer is set to anything but 5 minutes
 - Shuffled some of the Carnage Mode events around, making harder events show up later
