--- a/content/projects/chloe-collection/changelog/172.mdx
+++ b/content/projects/chloe-collection/changelog/172.mdx
@@ -8,7 +8,7 @@ export const metadata = {
 - Added better pacenotes to the Fairgrass Rally stages by Cordo
 - Added new bonus cars, the Trabant 601 from Half-Life Alyx and the Golf from Counter-Strike 2
 - Added new cheats to unlock hidden content
-- Added new skins for the FO1 Pepper, Trabant 601
+- Added new skins for the FO1 Pepper and Trabant 601 by teddyator
 - Fixed a crash at the start of multiplayer Knockout races
 - Fixed issues scrolling and selecting players on the multiplayer player list if there are more than 10 players
 - Fixed the Lancer Evolution V's suspension physics being wonky
