--- a/content/projects/chloe-collection/changelog/172.mdx
+++ b/content/projects/chloe-collection/changelog/172.mdx
@@ -17,4 +17,4 @@ export const metadata = {
 - Removed Gordon Freeman from the Light Prop Cars class in multiplayer
 - Repacked all .bfs files to significantly reduce the mod's filesize
 - The Cars Unlocked stat on your profile now skips all bonus and FO2 cars, reducing the displayed car count from 215 to just the 84 that are directly in the car list (requires you to save for it to take effect)
-- The Favorite Car stat in multiplayer now uses a more reliable method of keeping track of car IDs, reducing potential incorrect values after any future updates
+- The Favorite Car stat in multiplayer now uses a more reliable method of keeping track of car IDs, reducing potential for incorrect values after any future updates
