--- a/content/projects/chloe-collection/main.mdx
+++ b/content/projects/chloe-collection/main.mdx
@@ -59,6 +59,7 @@ Designed with customizability in mind, this mod is open-source and includes many
 - Improved AI profiles by Twobei 
 - Improved minimap AI colors by Twobei
 - Instant Action mode restored
+- Made Jill Richards a trans girl (this does not affect anything in the game, however she is trans now)
 - Multilap Time Trial mode with PB ghosts and toggleable props
 - Multiplayer mode without GFWL
 - Name changer in the Options menu
