flatout 1 chloe collection

--- a/content/downloads.mdx
+++ b/content/downloads.mdx
@@ -5,6 +5,7 @@ Big Projects
 
 
 FlatOut
+- Chloe Collection: https://drive.google.com/file/d/1W-SvKVUfpFd2V0xXah1LFVLlRYUHTqKn/view?usp=sharing
 - W32 & BGM Tool: https://github.com/gaycoderprincess/FlatOutW32BGMTool/releases
 - Database Tool: https://github.com/gaycoderprincess/FlatOut2DBTool/releases
 - DDS Fixer: https://github.com/gaycoderprincess/FlatOutUCDDSFixer/releases
