d3d9 note for fo1 chloe collection

--- a/content/projects/chloe-collection-fo1/changelog/101.mdx
+++ b/content/projects/chloe-collection-fo1/changelog/101.mdx
@@ -12,5 +12,5 @@ export const metadata = {
 - Fixed various issues with texture loading, including a crash after a certain amount of races are started
 - Locked career classes are now grayed out
 - Moved the music popup to the top of the screen to not obstruct the map or player health bars
-- Resetting your car now fades the screen out, and resets you mid-motion like FlatOut 2
+- Resetting your car now fades the screen out and resets you mid-motion like FlatOut 2
 - Reworked the derby system, adding consistent damage and a contact timer
