--- a/content/projects/chloe-collection-fo1/main.mdx
+++ b/content/projects/chloe-collection-fo1/main.mdx
@@ -16,6 +16,7 @@ Designed with customizability in mind, this mod is open-source and includes many
 
 - Make sure you have v1.1 of the game, as this is the only version this plugin is compatible with. (exe size of 2822144 bytes)
 - Plop the files into your game folder.
+- If you get an error message on startup, remove d3d9.dll from the game folder.
 - Enjoy, nya~ :3
   
 # Features
