--- a/content/projects/chloe-collection-fo1/changelog/101.mdx
+++ b/content/projects/chloe-collection-fo1/changelog/101.mdx
@@ -6,6 +6,7 @@ export const metadata = {
 
 - Added a text popup on-screen when wrecking your car
 - Added achievements like in Ultimate Carnage Chloe Collection, currently only includes a few basic achievements
+- Added door deformation to the Pepper and Blockhead by OgrMtar
 - Added opponent health bars, showing up if you get near someone else's car
 - Fixed a softlock after choosing your first car
 - Fixed some new HUD elements appearing and disappearing when they shouldn't
