--- a/content/projects/chloe-collection-fo1/changelog/104.mdx
+++ b/content/projects/chloe-collection-fo1/changelog/104.mdx
@@ -13,6 +13,7 @@ export const metadata = {
 - Added a toggle for displaying crash bonuses
 - Added a version number display to the start screen
 - Added back the controller deadzone option
+- Added more events into the career mode with the inclusion of time trials
 - Changed the player icons on the map to colored directional arrows
 - Changed the press enter prompt to Press START button to make it in line with the newer games
 - Changed the spacing of the player list slightly
