--- a/content/projects/chloe-collection-fo1/main.mdx
+++ b/content/projects/chloe-collection-fo1/main.mdx
@@ -34,8 +34,10 @@ Designed with customizability in mind, this mod is open-source and includes many
 - Added unique descriptions for every car
 - Addon BugBear Retro Demo cars
 - Addon FlatOut 2 cars: Chili, Malice, Roamer, Shaker, Banger, Splitter, Switchblade, Venom
+- AI opponents now have proper upgrades like in FlatOut 2
 - All cars and tracks unlocked by default for Single Race mode
 - Borderless windowed mode with seamless alt-tabbing that doesn't crash the game
+- Completely rewrote the car performance, car stats and general car data system, deprecating the equipment folder, removing all leftovers and converting the data to a more readable format
 - Handling damage in the Options menu, allowing you to either disable it entirely or reduce it by only removing the bouncy suspension
 - Moved The Ever Lasting from Central Supply Chain to the menu soundtrack
 - Moved the transmission selection to the Options menu, allowing you to change it at any time
