--- a/content/projects/chloe-collection-fo1/main.mdx
+++ b/content/projects/chloe-collection-fo1/main.mdx
@@ -27,9 +27,13 @@ Designed with customizability in mind, this mod is open-source and includes many
 - A new handling mode, Hardcore, which removes the arcadey handling elements and leaves you with more of a simcade feel
 - A new music player written from the ground up, allowing multiple songs to play per race and more than one menu song
 - A player list visible in-game that shows everyone's position
+- Added a new arcade mode with 12 unique events
+- Added a new gamemode, Arcade Race, a recreation of Ultimate Carnage's Carnage Race mode
+- Added a new gamemode, Demolition Rush, a reimagining of the cut Smashy Smash gamemode
 - Added crash bonuses, giving you money after every race for crashing into other cars
 - Added health bars when close to your opponents
 - Added nitro gain while airborne
+- Added support for split-screen mode up to 4 players using 4 controllers (or 3 and a keyboard)
 - Added the ability to own multiple cars in Career mode
 - Added the ability to wreck cars after they take enough damage in races
 - Added unique descriptions for every car
