--- a/content/projects/chloe-collection-fo1/changelog/109.mdx
+++ b/content/projects/chloe-collection-fo1/changelog/109.mdx
@@ -16,6 +16,7 @@ export const metadata = {
 - Fixed the arcade timer tick sometimes not playing as frequently as it should
 - Fixed the F5 menu being hidden during loading screens
 - Fixed the minimap not being centered in 4 player splitscreen
+- Fixed the Overkill achievement unlocking during normal races
 - Fixed the player car skin being random in Arcade Mode in some cases
 - Increased the maximum speed at which you're allowed to reset your car
 - Removed the Ragdoll option from the options menu as it breaks game functionality if disabled
