--- a/content/projects/chloe-collection-fo1/changelog/109.mdx
+++ b/content/projects/chloe-collection-fo1/changelog/109.mdx
@@ -4,9 +4,10 @@ export const metadata = {
 
 # v1.09
 
+- Added a confirm prompt upon attempting to quit the game
 - Added a fix for ultrawide aspect ratios, no longer requiring a separate widescreen fix to be used
+- Added a missing file required for the 1.1 official game update
 - Added a new reset system, fixing reset spots being very far away from your current position on some tracks
-- Added confirm prompt upon attempting to quit the game
 - Added reverse variants of most tracks, with some of them also being added to career
 - Added support for online multiplayer, written from scratch with support for AI opponents
 - Fixed a potential crash when starting up the game
