--- a/content/projects/chloe-collection-fo1/changelog/110.mdx
+++ b/content/projects/chloe-collection-fo1/changelog/110.mdx
@@ -5,9 +5,9 @@ export const metadata = {
 # v1.10
 
 - Added 3 more songs to the Chloe Collection soundtrack
+- Added a colored overlay to show your achieved medal in Arcade Mode events
 - Added a splash screen at game startup where there was previously a black screen
 - Added a splitscreen version of career mode, averaging your points between player 1 and 2 for each race
-- Added an overlay to show your achieved medal in Arcade Mode events
 - Added reverse tracks to multiplayer
 - Added the next checkpoint to the minimap in Arcade Race
 - Adjusted the tire physics for hardcore handling
