chloe collection fo1 1.12

--- a/content/downloads.mdx
+++ b/content/downloads.mdx
@@ -5,7 +5,7 @@ Big Projects
 
 
 FlatOut
-- Chloe Collection: https://drive.google.com/file/d/1pDxjLo8lQvo-5thcUUL89GJm0pzoiuSc/view?usp=sharing
+- Chloe Collection: https://mega.nz/file/9W0DyRya#ZrlGuJqyakUhM_VexerSQp2EVNePSnYosG2PMonQBgo
 - W32 & BGM Tool: https://github.com/gaycoderprincess/FlatOutW32BGMTool/releases
 - Database Tool: https://github.com/gaycoderprincess/FlatOut2DBTool/releases
 - DDS Fixer: https://github.com/gaycoderprincess/FlatOutUCDDSFixer/releases
