--- a/content/projects/chloe-collection-fo1/changelog/112.mdx
+++ b/content/projects/chloe-collection-fo1/changelog/112.mdx
@@ -12,5 +12,5 @@ export const metadata = {
 - Added selectable pride flags to multiplayer
 - Fixed the damage meter sometimes showing for wrecked opponents in derbies
 - Fixed the Select Profile and Create New Profile text being slightly offset
-- Splitscreen career mode now no longer displays the Frank Benton's empty score
+- Splitscreen career mode now no longer displays Frank Benton's empty score
 - Reworked the tutorial screen for Destruction Derby mode
