chloe collection fo1 1.13

--- a/content/downloads.mdx
+++ b/content/downloads.mdx
@@ -5,7 +5,7 @@ Big Projects
 
 
 FlatOut
-- Chloe Collection: https://mega.nz/file/9W0DyRya#ZrlGuJqyakUhM_VexerSQp2EVNePSnYosG2PMonQBgo
+- Chloe Collection: https://drive.google.com/file/d/1xI7q2eLBBvIdwwBF3EY3O0JkNRdYmu30/view?usp=sharing
 - W32 & BGM Tool: https://github.com/gaycoderprincess/FlatOutW32BGMTool/releases
 - Database Tool: https://github.com/gaycoderprincess/FlatOut2DBTool/releases
 - DDS Fixer: https://github.com/gaycoderprincess/FlatOutUCDDSFixer/releases
